envoy-front.json
{
  "static_resources": {
    "listeners": [
    {
      "address": {
        "socket_address": {
          "address": "0.0.0.0",
          "port_value": 8090
      }
    },
    "filter_chains": [
    {
      "filters": [
      {
        "name": "envoy.http_connection_manager",
        "config": {
          "codec_type": "auto",
          "stat_prefix": "ingress_http",
          "access_log": [
            {
              "name": "envoy.file_access_log",
              "path": "/tmp/access.log"
            }
          ],
          "route_config": {
          "name": "local_route",
          "virtual_hosts": [
          {
            "name": "backend",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/service/1"
                            },
                            "route": {
                              "cluster": "service1"
                            }
                          },
                          {
                            "match": {
                              "prefix": "/echo"
                            },
                            "route": {
                              "cluster": "echo"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.router",
                      "config": {}
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ]
  }
}
